--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,6 +34,7 @@ services:
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       POSTGRES_DATABASE: ${POSTGRES_DATABASE}
       POSTGRES_DB: ${POSTGRES_DATABASE}
+      POSTGRES_TEST_DB: ${POSTGRES_TEST_DATABASE}
     volumes:
       - pgdata:/var/lib/postgresql/data
     healthcheck:
