--- a/images/api/package.json
+++ b/images/api/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "NODE_ENV=test jest",
+    "test:watch": "NODE_ENV=test jest --watchAll",
     "start": "nodemon src/index.js"
   },
   "keywords": [],
@@ -17,5 +18,9 @@
     "knex": "^2.5.1",
     "nodemon": "^3.0.1",
     "pg": "^8.11.2"
+  },
+  "devDependencies": {
+    "jest": "^29.6.2",
+    "supertest": "^6.3.3"
   }
 }
