--- a/images/api/package.json
+++ b/images/api/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "NODE_ENV=test jest",
-    "test:watch": "NODE_ENV=test jest --watchAll",
+    "test": "NODE_ENV=test jest --testEnvironment=node --detectOpenHandles --forceExit",
     "start": "nodemon src/index.js"
   },
   "keywords": [],
