--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,8 +13,6 @@ services:
     environment:
       POSTGRES_CONNECTION_STRING: "postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@store:5432/${POSTGRES_DATABASE}"
       POSTGRES_DATABASE: ${POSTGRES_DATABASE} 
-    depends_on:
-      - store-test 
     healthcheck:
       test:
         [
@@ -47,27 +45,27 @@ services:
       timeout: 5s
       retries: 5
 
-  store-test:
-    image: postgres:latest
-    container_name: dev5-db-test
-    ports:
-      - 5433:5432
-    environment:
-      POSTGRES_USER: ${DB_USER_TEST}
-      POSTGRES_PASSWORD: ${DB_PASSWORD_TEST}
-      POSTGRES_DB: ${DB_NAME_TEST}
-    volumes:
-      - pgdata-test:/var/lib/postgresql/data
-    healthcheck:
-      test:
-        [
-          "CMD-SHELL",
-          "pg_isready -U $POSTGRES_USER -d $POSTGRES_DB"
-        ]
-      interval: 5s
-      timeout: 5s
-      retries: 5
+  # store-test:
+  #   image: postgres:latest
+  #   container_name: dev5-db-test
+  #   ports:
+  #     - 5433:5432
+  #   environment:
+  #     POSTGRES_USER: ${DB_USER_TEST}
+  #     POSTGRES_PASSWORD: ${DB_PASSWORD_TEST}
+  #     POSTGRES_DB: ${DB_NAME_TEST}
+  #   volumes:
+  #     - pgdata-test:/var/lib/postgresql/data
+  #   healthcheck:
+  #     test:
+  #       [
+  #         "CMD-SHELL",
+  #         "pg_isready -U $POSTGRES_USER -d $POSTGRES_DB"
+  #       ]
+  #     interval: 5s
+  #     timeout: 5s
+  #     retries: 5
 
 volumes:
   pgdata:
-  pgdata-test:
+  # pgdata-test:
