--- a/images/api/package.json
+++ b/images/api/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "NODE_ENV=test jest --testEnvironment=node --detectOpenHandles --forceExit",
+    "test": "mocha src/__tests__/*.test.js",
     "start": "nodemon src/index.js"
   },
   "keywords": [],
@@ -14,12 +14,15 @@
     "body-parser": "^1.20.2",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "knex": "^2.5.1",
     "nodemon": "^3.0.1",
     "pg": "^8.11.2"
   },
   "devDependencies": {
+    "chai": "^4.3.7",
     "jest": "^29.6.2",
+    "knex": "^2.5.1",
+    "knex-cleaner": "^1.3.1",
+    "mocha": "^10.2.0",
     "supertest": "^6.3.3"
   }
 }
