--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,9 @@ services:
       - ./images/api/src:/usr/app/src
     environment:
       POSTGRES_CONNECTION_STRING: "postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@store:5432/${POSTGRES_DATABASE}"
+      TEST_POSTGRES_CONNECTION_STRING: "postgres://${TEST_POSTGRES_USER}:${TEST_POSTGRES_PASSWORD}@store-test:5432/${TEST_POSTGRES_DATABASE}"
       POSTGRES_DATABASE: ${POSTGRES_DATABASE}
+      NODE_ENV: development
     healthcheck:
       test: [ "CMD", "node", "--version" ]
       interval: 5s
@@ -28,7 +30,6 @@ services:
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       POSTGRES_DATABASE: ${POSTGRES_DATABASE}
-      POSTGRES_DB: ${POSTGRES_DATABASE}
     volumes:
       - pgdata:/var/lib/postgresql/data
     healthcheck:
@@ -40,26 +41,28 @@ services:
       interval: 5s
       timeout: 5s
       retries: 5
-  # store-test:
-  #   image: postgres:latest
-  #   container_name: dev5-db-test
-  #   ports:
-  #     - 5433:5432
-  #   environment:
-  #     POSTGRES_USER: ${DB_USER_TEST}
-  #     POSTGRES_PASSWORD: ${DB_PASSWORD_TEST}
-  #     POSTGRES_DB: ${DB_NAME_TEST}
-  #   volumes:
-  #     - pgdata-test:/var/lib/postgresql/data
-  #   healthcheck:
-  #     test:
-  #       [
-  #         "CMD-SHELL",
-  #         "pg_isready -U $POSTGRES_USER -d $POSTGRES_DB"
-  #       ]
-  #     interval: 5s
-  #     timeout: 5s
-  #     retries: 5
+
+  store-test:
+    image: postgres:latest
+    container_name: dev5-db-test
+    ports:
+      - 5433:5432
+    environment:
+      POSTGRES_USER: ${TEST_POSTGRES_USER}
+      POSTGRES_PASSWORD: ${TEST_POSTGRES_PASSWORD}
+      POSTGRES_DATABASE: ${TEST_POSTGRES_DATABASE}
+    volumes:
+      - pgdata-test:/var/lib/postgresql/data
+    healthcheck:
+      test:
+        [
+          "CMD-SHELL",
+          "pg_isready -U $TEST_POSTGRES_USER -d $TEST_POSTGRES_DATABASE"
+        ]
+      interval: 5s
+      timeout: 5s
+      retries: 5
 
 volumes:
-  pgdata: # pgdata-test:
+  pgdata:
+  pgdata-test:
