--- a/images/api/package.json
+++ b/images/api/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "mocha src/__tests__/*.test.js",
+    "test": "NODE_ENV=test jest --runInBand",
     "start": "nodemon src/index.js"
   },
   "keywords": [],
@@ -18,11 +18,12 @@
     "pg": "^8.11.2"
   },
   "devDependencies": {
-    "chai": "^4.3.7",
     "jest": "^29.6.2",
     "knex": "^2.5.1",
     "knex-cleaner": "^1.3.1",
-    "mocha": "^10.2.0",
     "supertest": "^6.3.3"
+  },
+  "jest": {
+    "testEnvironment": "node"
   }
 }
