--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,9 +27,9 @@ services:
     ports:
       - 5432:5432
     environment:
-      POSTGRES_USER: ${{ secrets.POSTGRES_USER }}
-      POSTGRES_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
-      POSTGRES_DATABASE: ${{ secrets.POSTGRES_DATABASE }}
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DATABASE: ${POSTGRES_DATABASE}
     volumes:
       - pgdata:/var/lib/postgresql/data
     healthcheck:
@@ -48,9 +48,9 @@ services:
     ports:
       - 5433:5432
     environment:
-      POSTGRES_USER: ${{ secrets.TEST_POSTGRES_USER }}
-      POSTGRES_PASSWORD: ${{ secrets.TEST_POSTGRES_PASSWORD }}
-      POSTGRES_DATABASE: ${{ secrets.TEST_POSTGRES_DATABASE }}
+      POSTGRES_USER: ${TEST_POSTGRES_USER}
+      POSTGRES_PASSWORD: ${TEST_POSTGRES_PASSWORD}
+      POSTGRES_DATABASE: ${TEST_POSTGRES_DATABASE}
     volumes:
       - pgdata-test:/var/lib/postgresql/data
     healthcheck:
