--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,8 +3,8 @@ version: '3.2'
 services:
   api:
     container_name: dev5-api
-    env_file:
-      - ./.env
+    # env_file:
+    #   - ./.env
     build: ./images/api
     ports:
       - 80:3000
