--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,8 +3,8 @@ version: '3.2'
 services:
   api:
     container_name: dev5-api
-    # env_file:
-    #   - ./.env
+    env_file:
+      - .env
     build: ./images/api
     ports:
       - 80:3000
@@ -13,8 +13,10 @@ services:
     environment:
       POSTGRES_CONNECTION_STRING: "postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@store:5432/${POSTGRES_DATABASE}"
       TEST_POSTGRES_CONNECTION_STRING: "postgres://${TEST_POSTGRES_USER}:${TEST_POSTGRES_PASSWORD}@store-test:5432/${TEST_POSTGRES_DATABASE}"
-      POSTGRES_DATABASE: ${POSTGRES_DATABASE}
       NODE_ENV: development
+    depends_on:
+      - store
+      - store-test
     healthcheck:
       test: [ "CMD", "node", "--version" ]
       interval: 5s
@@ -30,8 +32,10 @@ services:
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       POSTGRES_DATABASE: ${POSTGRES_DATABASE}
+      POSTGRES_HOST_AUTH_METHOD: ${POSTGRES_HOST_AUTH_METHOD}
     volumes:
       - pgdata:/var/lib/postgresql/data
+      - ./init-scripts:/docker-entrypoint-initdb.d/
     healthcheck:
       test:
         [
@@ -51,8 +55,11 @@ services:
       POSTGRES_USER: ${TEST_POSTGRES_USER}
       POSTGRES_PASSWORD: ${TEST_POSTGRES_PASSWORD}
       POSTGRES_DATABASE: ${TEST_POSTGRES_DATABASE}
+      POSTGRES_HOST_AUTH_METHOD: ${TEST_POSTGRES_HOST_AUTH_METHOD}
+
     volumes:
       - pgdata-test:/var/lib/postgresql/data
+      - ./init-scripts:/docker-entrypoint-initdb.d/
     healthcheck:
       test:
         [
